[2017/11/28]
+ IMPORTANT: When working directly with streams in read or write operations their positions will not be reseted automatically. See "ReadWriteFromStream()" and ""ReadWriteFromStream2()"" sample in TestDxfDocument project for more details.
+ Added the header DrawingVariables UcsOrg, UcsXDir, and UcsYDir.
+ Added MText property drawing direction.
+ The MathHelper.RoundToNearest method now internally uses a long instead of an int for increased precision. It will still raise an exception if very high numbers and/or very low roundTo values are used.
+ (fixed) Missing read and write code of MText property LineSpacingStyle.

[2017/10/5]
+ Added Vector2 and Vector3 multiplication and division component by component.
+ Added parameter checks for invalid values in several constructors.
+ (fixed) Issues with the clipping boundary in images.
+ (fixed) Issue Id #13554 Issue with image in dxf. While reading a dxf, any Image entity with vector u or v equals to zero will be skipped. 

[2.0.3 - 2017/5/24]
+ Added AutoCad drawing database version number AC1032 = AutoCAD 2018.
+ A block that represents the dimension will be generated if, while loading a dxf, a Dimension entity is found with no associated block.
+ (fixed) The properties of the document viewport (*Active VPort) will be properly loaded.
+ (fixed) Issue Id #13553 Arcs in exploded polylines with zero radius.
+ (fixed) Issue Id #13552 Exception with open viewport.
+ (fixed) Issue Id #13551 Exception for dimension with negative text offset. Now its absolute value will be used instead.
+ (fixed) Issue Id #13550 Problem with MLINESTYLE with no elements. A default element will be added to the style if no one is found.
+ (fixed) Issue Id #13548 Hatch issue. Workaround for associative hatches which contour edges point to erroneous entities.
+ (fixed) Issue Id #13543 Reading Angular2LineDimensions.
+ (fixed) Issue Id #13540 Error when loading Spline created with only Fit Points.